overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -210,7 +209,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -492,7 +490,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -749,7 +746,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -1118,7 +1114,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -1333,7 +1328,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -1501,7 +1495,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -1874,7 +1867,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -2094,7 +2086,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -2332,7 +2323,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
@@ -2415,6 +2405,7 @@ button {
   display: -ms-grid;
   display: grid;
   place-items: center;
+  overflow-x: hidden;
 }
 
 .about-container {
@@ -2551,7 +2542,6 @@ button {
       grid-template-rows: 1fr 100fr 1fr;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
