--- a/src/css/_about.scss
+++ b/src/css/_about.scss
@@ -6,6 +6,8 @@
   width: 100%;
   display: grid;
   place-items: center;
+  overflow-x: hidden;
+
 }
 
 .about-container {
