--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -77,7 +77,6 @@ button {
   "footer";
   grid-template-rows: 1fr 100fr 1fr;  
   grid-template-columns: 100%;
-  overflow-x: hidden;
 }
 
 .header {
